--- a/views/user/account.ejs
+++ b/views/user/account.ejs
@@ -63,7 +63,8 @@
         }
     </style> 
 
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
@@ -170,7 +171,7 @@
 				  <!-- edit address -->
 				  <% if (user.addresses && user.addresses.length > 0) { %>
 					<% user.addresses.forEach(address => { %>
-				  <div class="mt-3 mb-3 bg-light p-2 rounded text-dark">
+				  <div class="mt-3 mb-3 bg-light p-2 rounded text-dark" id="div_<%= address._id %>">
 					<div class="d-flex align-items-center">
 					  <small class="me-4">FullName:<%= address.name %></small>
 					  <a href="#" class="ms-auto text-dark mt-0" style="margin-left: auto;">
@@ -178,8 +179,8 @@
 						  <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
 						</svg>
 					  </a>
-					  <a href="/remove-address/<%= user._id %>/<%= address._id %>" class="text-dark" style="margin-left: 10px;" >
-						<svg aria-hidden="true" onclick="removeAddress('<%=user._id%>', '<%=address._id%>')" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill ml-2 mt-1" viewBox="0 0 16 16">
+					  <a href="#" class="text-dark" onclick="removeAddress('<%=user._id%>', '<%=address._id%>')" style="margin-left: 10px;" >
+						<svg aria-hidden="true"  xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill ml-2 mt-1" viewBox="0 0 16 16">
 							<path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"/>
 						</svg>
 						
@@ -227,24 +228,51 @@
     crossorigin="anonymous"></script>
   
   <script>
-       function removeAddress(userId,addressId){
-        $.ajax({
-            url: '/remove-address/' + userId + '/' + addressId,
-            method:'post',
-            data:{
-                userId:userId,
-                addressId:addressId,
-            },
-            success:(response)=>{
-                if(response == true){
-                    location.reload();;
-                }else{
-                    location.reload();
-                }
+    //    function removeAddress(userId,addressId){
+	// 	alert(userId)
+	// 	alert(addressId)
+    //     $.ajax({
+    //         url: '/remove-address/' + userId + '/' + addressId,
+    //         method:'post',
+    //         data:{
+    //             userId:userId,
+    //             addressId:addressId,
+    //         },
+    //         success:(response)=>{
+	// 			console.log(response);
+	// 			alert('hi')
+	// 			alert(response)
+    //             if(response === true){
+	// 				location.reload();
+    //             }else{
+	// 				location.reload();
+    //             }
                 
-            }
-        })
-    }
+    //         }
+    //     })
+    // }
+
+
+	async function removeAddress(userId, addressId) {
+    alert(userId);
+    alert(addressId);
+
+    const response = fetch('/remove-address/', {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json',
+      },
+      body: JSON.stringify({
+        userId: userId,
+        addressId: addressId,
+      }),
+    })
+	if(response.status === 200) {
+		document.getElementById('div_'+addressId).remove()
+	} else {
+		location.reload()
+	}
+  }
 
   </script>
 
