--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,47 +1,70 @@
 <!-- Animate.css -->
-<link rel="stylesheet" href="css/animate.css">
+<link rel="stylesheet" href="css/animate.css" />
 
 <nav class="colorlib-nav" role="navigation">
-    <div class="top-menu">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-7 col-md-9">
-                    <div id="colorlib-logo"><a href="index.html">Shoes.in</a></div>
-                </div>
-                <div class="col-sm-5 col-md-3">
-                    <form action="#" class="search-wrap">
-                        <div class="form-group">
-                            <input type="search" class="form-control search" placeholder="Search">
-                            <button class="btn btn-primary submit-search text-center" type="submit"><i class="icon-search"></i></button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-12 text-left menu-1">
-                    <ul>
-                        <li class="active"><a href="/">Home</a></li>
-                        <li class="has-dropdown">
-                            <a href="/men">Men</a>
-                        </li>
-                        <li><a href="/women">Women</a></li>
-                        <li><a href="/kids">Kids</a></li>
-                        <li><a href="/product-details">products</a></li>
-                        <li><a href="/cart"><i class="icon-shopping-cart"></i>Cart [0]</a></li>
-                        
-                        <li class="has-dropdown">
-                            <a href="/account">Account</a>
-                            <ul class="dropdown">
-                                <li><a href="/account">Profile</a></li>
-                                <li><a href="/logout">Logout</a></li>
-                            </ul>
-                        </li>
-                        
-                        
-                    </ul>
-                </div>
-            </div>
+  <div class="top-menu">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-7 col-md-9">
+          <div id="colorlib-logo"><a href="index.html">Shoes.in</a></div>
         </div>
+        <div class="col-sm-5 col-md-3">
+          <form action="#" class="search-wrap">
+            <div class="form-group">
+              <input
+                type="search"
+                class="form-control search"
+                placeholder="Search"
+              />
+              <button
+                class="btn btn-primary submit-search text-center"
+                type="submit"
+              >
+                <i class="icon-search"></i>
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12 text-left menu-1">
+          <ul class="navbar-menu-flex">
+            <div>
+              <li class="active"><a href="/">Home</a></li>
+              <li class="has-dropdown">
+                <a href="/men">Men</a>
+              </li>
+              <li><a href="/women">Women</a></li>
+              <li><a href="/kids">Kids</a></li>
+              <li><a href="/items">products</a></li>
+              <li>
+                <a href="/cart"><i class="icon-shopping-cart"></i>Cart [0]</a>
+              </li>
+
+              <li class="has-dropdown">
+                <a href="/account">Account</a>
+                <ul class="dropdown">
+                  <li><a href="/account">Profile</a></li>
+                  <li><a href="/logout">Logout</a></li>
+                </ul>
+              </li>
+            </div>
+
+            <div>
+              <li class="afterlogin">
+                <% if(typeof username!==undefined){ %>
+                <a href="/account"> <img
+                
+                    style="width: 40px; height: 40px"
+                   src="/images/user-circle-svgrepo-com.svg "
+                    alt=""
+                  /> </a>
+                <%= username %> <% } %>
+              </li>
+            </div>
+          </ul>
+        </div>
+      </div>
     </div>
-    
+  </div>
 </nav>
